Just I took Modification

--- a/Third Class/event.html
+++ b/Third Class/event.html
@@ -8,6 +8,7 @@
 <body>
     <h1 id="h11">Event Js</h1>
     <button>Edit</button>
+    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Itaque neque natus molestiae et. Dolore odit voluptates quae veniam eum possimus molestiae, earum, beatae rem totam dolor officia laboriosam a numquam!</p>
 
     <script src="./event.js"></script>
     
